start of demo code
created initial classes for models library, and some code with a couple
unpopulated tests.

--- a/TeamCityOctopus/src/TeamCityOctopusDemo/TeamCityOctopusDemo.Models.Tests/TeamCityOctopusDemo.Models.Tests.csproj
+++ b/TeamCityOctopus/src/TeamCityOctopusDemo/TeamCityOctopusDemo.Models.Tests/TeamCityOctopusDemo.Models.Tests.csproj
@@ -50,6 +50,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Bowlers\TheDudeTest.cs" />
+    <Compile Include="Bowlers\WalterSobchakTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
