--- a/TeamCityOctopus/src/TeamCityOctopusDemo/TeamCityOctopusDemo.Models/TeamCityOctopusDemo.Models.csproj
+++ b/TeamCityOctopus/src/TeamCityOctopusDemo/TeamCityOctopusDemo.Models/TeamCityOctopusDemo.Models.csproj
@@ -39,6 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bowlers\IBowler.cs" />
+    <Compile Include="Bowlers\TheDude.cs" />
+    <Compile Include="Bowlers\WalterSobchak.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
