updated demo config file and settings
adding various settings to discuss how they change during deployment

--- a/TeamCityOctopus/src/TeamCityOctopusDemo/TeamCityOctopusDemo.Web/TeamCityOctopusDemo.Web.csproj
+++ b/TeamCityOctopus/src/TeamCityOctopusDemo/TeamCityOctopusDemo.Web/TeamCityOctopusDemo.Web.csproj
@@ -192,7 +192,7 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
-    <Content Include="Web.Debug.config">
+    <Content Include="Web.Test.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Web.Release.config">
