--- a/TeamCityOctopus/src/TeamCityOctopusDemo/TeamCityOctopusDemo.Web/Web.Test.config
+++ b/TeamCityOctopus/src/TeamCityOctopusDemo/TeamCityOctopusDemo.Web/Web.Test.config
@@ -8,12 +8,10 @@
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
     finds an attribute "name" that has a value of "MyDB".
 
-    <connectionStrings>
-      <add name="MyDB"
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
   -->
+	<appSettings>
+		<add key="MyInsertedAppSetting" value="" xdt:Transform="Insert"/>
+	</appSettings>
   <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire
