--- a/TeamCityOctopus/src/TeamCityOctopusDemo/TeamCityOctopusDemo.Web/Web.config
+++ b/TeamCityOctopus/src/TeamCityOctopusDemo/TeamCityOctopusDemo.Web/Web.config
@@ -17,6 +17,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<add key="ProjectLevelSetting" value="local value"/>
+	<add key="LibrarySetLevelSetting" value="global local value"/>
+	<add key="ApplicationVersion" value="0.0"/>
+	<add key="SettingThatShouldntEverChange" value="don't mess with me"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
