corrected appsetting name, setting up for demo

--- a/TeamCityOctopus/src/TeamCityOctopusDemo/TeamCityOctopusDemo.Web/Web.config
+++ b/TeamCityOctopus/src/TeamCityOctopusDemo/TeamCityOctopusDemo.Web/Web.config
@@ -18,7 +18,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	<add key="ProjectLevelSetting" value="local value"/>
-	<add key="LibrarySetLevelSetting" value="global local value"/>
+	<add key="VariableSetLevelSetting" value="global local value"/>
 	<add key="ApplicationVersion" value="0.0"/>
 	<add key="SettingThatShouldntEverChange" value="don't mess with me"/>
   </appSettings>
